[gd_scene load_steps=7 format=3 uid="uid://cpjphsps6q2df"]

[ext_resource type="Script" uid="uid://cknelxudxl62h" path="res://scenes/Floor2/floor_2.gd" id="1_e74p3"]
[ext_resource type="Texture2D" uid="uid://cvnbhpv3scjh5" path="res://scenes/Floor2/bg.png" id="1_yx5g7"]
[ext_resource type="PackedScene" uid="uid://dkixfmdf7tn0s" path="res://scenes/player/player.tscn" id="2_e74p3"]
[ext_resource type="Script" uid="uid://bpn71kxevfb2h" path="res://scenes/Floor1/button.gd" id="3_mkb7x"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_eepb4"]
a = Vector2(-474, -298)
b = Vector2(-474, 296)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_bbl21"]
a = Vector2(-475, 296)
b = Vector2(475, 296)

[node name="Floor2" type="Node2D"]
script = ExtResource("1_e74p3")

[node name="Bg" type="Sprite2D" parent="."]
modulate = Color(0.3764706, 0.5686275, 0.54509807, 1)
texture = ExtResource("1_yx5g7")

[node name="Walls" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="LeftWall" type="StaticBody2D" parent="Walls"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
shape = SubResource("SegmentShape2D_eepb4")

[node name="RightWall" type="StaticBody2D" parent="Walls"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
position = Vector2(950, 2)
shape = SubResource("SegmentShape2D_eepb4")

[node name="DownWall" type="StaticBody2D" parent="Walls"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/DownWall"]
shape = SubResource("SegmentShape2D_bbl21")
metadata/_edit_lock_ = true

[node name="UpWall" type="StaticBody2D" parent="Walls"]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/UpWall"]
position = Vector2(-1, -594)
shape = SubResource("SegmentShape2D_bbl21")

[node name="Objects" type="Node2D" parent="."]

[node name="Player" parent="Objects" instance=ExtResource("2_e74p3")]
z_index = 1

[node name="L2toB" type="Button" parent="Objects"]
offset_left = 488.0
offset_top = -215.0
offset_right = 529.0
offset_bottom = -152.0
theme_override_font_sizes/font_size = 40
action_mode = 0
text = "B"
script = ExtResource("3_mkb7x")

[node name="L2toL1" type="Button" parent="Objects"]
offset_left = 487.0
offset_top = -288.0
offset_right = 528.0
offset_bottom = -225.0
theme_override_font_sizes/font_size = 40
action_mode = 0
text = "1"
script = ExtResource("3_mkb7x")

[node name="MarcadoresAjo" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Marker2D" type="Marker2D" parent="MarcadoresAjo"]
position = Vector2(-452, -272)

[node name="Marker2D6" type="Marker2D" parent="MarcadoresAjo"]
position = Vector2(212, 140)

[node name="Marker2D7" type="Marker2D" parent="MarcadoresAjo"]
position = Vector2(-89, 162)

[node name="Marker2D8" type="Marker2D" parent="MarcadoresAjo"]
position = Vector2(377, -208)

[node name="Marker2D2" type="Marker2D" parent="MarcadoresAjo"]
position = Vector2(-196, -98)

[node name="Marker2D3" type="Marker2D" parent="MarcadoresAjo"]
position = Vector2(151, -110)

[node name="Marker2D4" type="Marker2D" parent="MarcadoresAjo"]
position = Vector2(-381, 225)

[node name="Marker2D5" type="Marker2D" parent="MarcadoresAjo"]
position = Vector2(464, 19)

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="pressed" from="Objects/L2toB" to="." method="_on_l_2_to_b_pressed"]
[connection signal="pressed" from="Objects/L2toL1" to="." method="_on_l_2_to_l_1_pressed"]
